tests/rosetta/out/Smalltalk/damm-algorithm.out
/tmp/damm-algorithm.st:8: parse error, expected ']'
