tests/rosetta/out/Smalltalk/damm-algorithm.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| damm tbl digits interim i digit row padLeft main s |
damm := [:s | tbl := {{0. 3. 1. 7. 5. 9. 8. 6. 4. 2}. {7. 0. 9. 2. 1. 5. 4. 8. 6. 3}. {4. 2. 0. 6. 8. 7. 1. 3. 5. 9}. {1. 7. 5. 0. 9. 8. 3. 4. 2. 6}. {6. 1. 2. 3. 0. 4. 5. 9. 7. 8}. {3. 6. 7. 4. 2. 0. 9. 5. 8. 1}. {5. 8. 6. 9. 7. 2. 0. 1. 3. 4}. {8. 9. 4. 5. 3. 6. 2. 0. 1. 7}. {9. 4. 3. 8. 6. 1. 7. 2. 0. 5}. {2. 5. 8. 1. 4. 3. 6. 7. 9. 0}}.
digits := Dictionary from:{'0'->0. '1'->1. '2'->2. '3'->3. '4'->4. '5'->5. '6'->6. '7'->7. '8'->8. '9'->9}.
interim := 0.
i := 0.
[(i < ((s size)))] whileTrue: [.
digit := digits at: s copyFrom: (i + 1) to: (i + 1) asInteger.
row := tbl at: interim.
interim := row at: digit.
i := (i + 1).
].
.
(interim = 0). ].
padLeft := [:s :width | [(((s size)) < width)] whileTrue: [.
s := ((' ') + s).
].
.
s. ].
main := [ {'5724'. '5727'. '112946'. '112949'} do: [:s |.
Transcript show: (((((padLeft value: s value: 6) + ('  '))) + ((damm value: s asString)))) printString; cr.
].
. ].
main value.
